# lasty-ld24-evolution

./: .gitignore  CMakeLists.txt  ProjectHome.md  README.txt  app.cpp  app.h  audio.cpp  audio.h  colours.h  entity.cpp  entity.h  font.cpp  font.h  globals.h  image.cpp  image.h  main.cpp  opengl.h  primitives.cpp  primitives.h  program.cpp  program.h  tileboard.cpp  tileboard.h  vertexbuffer.cpp  vertexbuffer.h
cmake/: FindGLEW.cmake
data/: basic.shader  colour.shader  solidcolour.shader
libs/glm/core/: setup.hpp
